--- a/src/shop-app.html
+++ b/src/shop-app.html
@@ -17,6 +17,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../bower_components/iron-media-query/iron-media-query.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="../bower_components/iron-meta/iron-meta.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="shop-category-data.html">
 <!-- Since 'home' is the default route, eagerly load it. -->
@@ -205,6 +206,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         text-transform: uppercase;
       }
 
+      .account-btn-container paper-icon-button {
+        clip-path: circle(11px at center);
+      }
+
       /* small screen */
       @media (max-width: 767px) {
         :host {
@@ -234,6 +239,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         tail="{{subroute}}"></app-route>
 
     <iron-media-query query="max-width: 767px" query-matches="{{smallScreen}}"></iron-media-query>
+    <iron-meta id="meta" type="account"></iron-meta>
 
     <!--
       shop-category-data provides the list of categories.
@@ -250,6 +256,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         num-items="{{numItems}}"
         total="{{total}}"></shop-cart-data>
 
+    <!--
+      shop-account-data maintains the state of the user's account (in
+      localstorage). Does not, and should not, store password.
+    -->
+    <shop-account-data
+        id="account"
+        profile="{{profile}}"></shop-account-data>
+
     <app-header role="navigation" id="header" effects="waterfall" condenses reveals>
       <app-toolbar>
         <div class="left-bar-item">
@@ -263,7 +277,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <paper-icon-button icon="arrow-back" aria-label="Go back"></paper-icon-button>
           </a>
         </div>
+        <div class="left-bar-item"></div>
         <div class="logo" main-title><a href="/" aria-label="SHOP Home">SHOP</a></div>
+        <div class="account-btn-container">
+          <a href="/account" tabindex="-1">
+            <paper-icon-button
+              src="[[profile.iconURL]]"
+              icon="[[_computeProfileIcon(profile)]]"
+              aria-label="Account"
+              on-tap="_onLogin"></paper-icon-button>
+          </a>
+        </div>
         <div class="cart-btn-container">
           <a href="/cart" tabindex="-1">
             <paper-icon-button icon="shopping-cart" aria-label$="Shopping cart: [[_computePluralizedQuantity(numItems)]]"></paper-icon-button>
@@ -319,6 +343,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <shop-cart name="cart" cart="[[cart]]" total="[[total]]"></shop-cart>
       <!-- checkout view -->
       <shop-checkout name="checkout" cart="[[cart]]" total="[[total]]" route="{{subroute}}"></shop-checkout>
+      <!-- account view -->
+      <shop-account name="account" profile="[[profile]]" route="[[subroute]]" prefilled-email="[[userEmail]]"></shop-account>
 
       <shop-404-warning name="404"></shop-404-warning>
     </iron-pages>
@@ -349,6 +375,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           observer: '_pageChanged'
         },
 
+        // profile: {
+        //   type: Object,
+        //   value: {
+        //     name: '',
+        //     iconURL: '',
+        //     email: ''
+        //   }
+        // },
+
+        userEmail: {
+          type: String,
+          value: ''
+        },
+
         numItems: {
           type: Number,
           value: 0
@@ -364,6 +404,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         _shouldRenderDrawer: {
           computed: '_computeShouldRenderDrawer(smallScreen, loadComplete)'
+        },
+
+        _accountIcon: {
+          computed: '_computeProfileIcon()'
         }
       }}
 
@@ -388,10 +432,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         this.addEventListener('announce', (e)=>this._onAnnounce(e));
         this.addEventListener('dom-change', (e)=>this._domChange(e));
         this.addEventListener('show-invalid-url-warning', (e)=>this._onFallbackSelectionTriggered(e));
+        this.addEventListener('show-snackbar', (e)=>this._showSnackbar(e));
+        this.addEventListener('buy-item', (e)=>this._onBuyItem(e));
+        this.addEventListener('buy-cart', (e)=>this._onBuyCart(e));
+        this.addEventListener('logout', (e)=>this._onLogout(e));
         // listen for online/offline
         Polymer.RenderStatus.afterNextRender(this, () => {
           window.addEventListener('online', (e)=>this._notifyNetworkStatus(e));
           window.addEventListener('offline', (e)=>this._notifyNetworkStatus(e));
+          window.addEventListener('account-ready', (e)=>this._autoLogin(e));
         });
       }
 
@@ -464,6 +513,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               'You are offline' : 'You are online';
           this._networkSnackbar.open();
         }
+      }
+
+      _showSnackbar(e) {
+        if (!this._networkSnackbar) {
+          this._networkSnackbar = document.createElement('shop-snackbar');
+          this.root.appendChild(this._networkSnackbar);
+        }
+        this._networkSnackbar.innerHTML = e.detail.text;
+        this._networkSnackbar.open();
       }
 
       _toggleDrawer() {
@@ -544,6 +602,63 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         this._announce('Cart cleared');
       }
 
+      _autoLogin() {
+        this.accountData = this.$.meta.byKey('account');
+
+        // If already signed in, no need to auto sign-in.
+        if (this.accountData.isSignedIn()) return;
+        this.accountData.autoSignIn(true)
+        .then(profile => {
+          if (profile) {
+            this.dispatchEvent(new CustomEvent('show-snackbar', {
+              bubbles: true, composed: true, detail: {
+                text: 'You are signed in!'
+              }
+            }));
+          } else {
+            console.log('No credentials found');
+          }
+        }, err => {
+          console.log('auto sign-in did not happen');
+        });
+      }
+
+      _onLogin(event) {
+        event.preventDefault();
+        if (this.accountData.isSignedIn()) {
+          this.set('route.path', '/account');
+          return;
+        }
+        this.accountData.autoSignIn(false)
+        .then(profile => {
+          if (profile) {
+            this.dispatchEvent(new CustomEvent('show-snackbar', {
+              bubbles: true, composed: true, detail: {
+                text: 'You are signed in!'
+              }
+            }));
+          } else {
+            this.set('route.path', '/account');
+          }
+        }, err => {
+          this.dispatchEvent(new CustomEvent('show-snackbar', {
+            bubbles: true, composed: true, detail: {
+              text: 'Sign-In failed'
+            }
+          }));
+          this.set('route.path', '/account');
+        });
+      }
+
+      _onLogout(event) {
+        this.accountData.logout();
+        this.dispatchEvent(new CustomEvent('show-snackbar', {
+          bubbles: true, composed: true, detail: {
+            text: 'You are signed out.'
+          }
+        }));
+      }
+
       // Elements in the app can notify a change to be a11y announced.
       _onAnnounce(e) {
         this._announce(e.detail);
@@ -590,6 +705,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         return quantity + ' ' + (quantity === 1 ? 'item' : 'items');
       }
 
+      _computeProfileIcon(profile) {
+        if (profile && profile.id) {
+          return profile.iconURL ? '' : 'face';
+        } else {
+          return 'account-circle';
+        }
+      }
     }
 
     customElements.define(ShopApp.is, ShopApp);
