Add Payment Request API and fix misc issues, converted to 2.0

--- a/src/lazy-resources.html
+++ b/src/lazy-resources.html
@@ -14,6 +14,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="shop-analytics.html">
 <link rel="import" href="shop-cart-data.html">
 <link rel="import" href="shop-cart-modal.html">
+<link rel="import" href="shop-order-success-modal.html">
 <link rel="import" href="shop-snackbar.html">
 <link rel="import" href="shop-tabs.html">
 <link rel="import" href="shop-tab.html">
