--- a/src/shop-cart.html
+++ b/src/shop-cart.html
@@ -62,7 +62,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <div class="checkout-box">
           Total: <span class="subtotal">[[_formatTotal(total)]]</span>
           <shop-button responsive>
-            <a href="/checkout">Checkout</a>
+            <button on-tap="_buyCart" type="button">Checkout</button>
           </shop-button>
         </div>
       </div>
@@ -93,6 +93,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         }
 
       }}
+
+      _buyCart() {
+        this.dispatchEvent(new CustomEvent('buy-cart', {
+          bubbles: true, composed: true
+        }));
+      }
 
       _formatTotal(total) {
         return isNaN(total) ? '' : '$' + total.toFixed(2);
