--- a/src/shop-payment-request.html
+++ b/src/shop-payment-request.html
@@ -8,15 +8,16 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/polymer/polymer-element.html">
 
 <dom-module id="shop-payment-request">
   <script>
 
-    Polymer({
-      is: 'shop-payment-request',
+    class ShopPaymentRequest extends Polymer.Element {
 
-      properties: {
+      static get is() { return 'shop-payment-request' }
+
+      static get properties() { return {
         page: String,
 
         cart: Array,
@@ -71,10 +72,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         _paymentTypesSupported: {
           computed: '_computePaymentTypesSupported(basicCard, supportedMethods, payWithGoogle)'
         }
-      },
+      }}
 
-      buyItems: function(itemDetails, totalCost) {
-        var details = {
+      buyItems(itemDetails, totalCost) {
+        let details = {
           total: { label: this.summaryLabel, amount:
             { currency: this.currency, value: totalCost.toFixed(2) }
           },
@@ -82,7 +83,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         };
 
         // Collect a shipping address, and honor client's other options.
-        var options = {
+        let options = {
           requestShipping:    true,
           requestPayerEmail:  this.requestPayerEmail,
           requestPayerPhone:  this.requestPayerPhone,
@@ -90,34 +91,32 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           shippingType:       this.shippingType
         };
 
-        var request = new PaymentRequest(this._paymentTypesSupported, details, options);
-
-        var that = this;
+        let request = new PaymentRequest(this._paymentTypesSupported, details, options);
 
         // Handle changing shipping options
-        request.addEventListener('shippingoptionchange', function(e) {
-            e.updateWith(new Promise(function(resolve) {
-                that._updateShippingOptions(details, request.shippingOption, resolve);
-            }));
+        request.addEventListener('shippingoptionchange', e => {
+          e.updateWith(new Promise(resolve => {
+            this._updateShippingOptions(details, request.shippingOption, resolve);
+          }));
         });
 
         // Handle selecting/changing the shipping address
-        request.addEventListener('shippingaddresschange', function(e) {
-          e.updateWith(new Promise(function(resolve) {
-              that._updateShippingAddress(details, request.shippingAddress, resolve);
+        request.addEventListener('shippingaddresschange', e => {
+          e.updateWith(new Promise(resolve => {
+            this._updateShippingAddress(details, request.shippingAddress, resolve);
           }));
         });
 
         return request.show()
-      },
+      }
 
-      _updateShippingAddress: function(details, addr, resolve) {
+      _updateShippingAddress(details, addr, resolve) {
         // If there's no shipping options for the address, it will be rejected on an empty array
         details.shippingOptions = [];
 
-        var oldShipping;
+        let oldShipping;
         // find previously selected shipping info, if any
-        details.displayItems.forEach( function(item) {
+        details.displayItems.forEach(item => {
           if (item.selected === true && item.id) {
             oldShipping = item;
           }
@@ -125,11 +124,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         if (addr.country === 'US' && addr.region === 'CA') {
           // Free standard shipping in CA; default
-          var shippingOption = {
-              id: 'ca',
-              label: 'Free shipping in California',
-              amount: {currency: this.currency, value: '0.00'},
-              selected: true
+          let shippingOption = {
+            id: 'ca',
+            label: 'Free shipping in California',
+            amount: {currency: this.currency, value: '0.00'},
+            selected: true
           };
 
           details.shippingOptions.push(shippingOption);
@@ -137,17 +136,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
           // Express shipping in CA for $5
           details.shippingOptions.push({
-              id: 'ca_express',
-              label: 'Express shipping in California',
+            id: 'ca_express',
+            label: 'Express shipping in California',
               amount: {currency: this.currency, value: '5.00'}
           });
         } else {
           // Standard shipping to anywhere for $10
-          var shippingOption = {
-              id: 'standard',
-              label: 'Standard shipping',
-              amount: {currency: this.currency, value: '10.00'},
-              selected: true
+          let shippingOption = {
+            id: 'standard',
+            label: 'Standard shipping',
+            amount: {currency: this.currency, value: '10.00'},
+            selected: true
           };
 
           details.shippingOptions.push(shippingOption);
@@ -155,18 +154,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
           // Express shipping worldwide for $20
           details.shippingOptions.push({
-              id: 'global_express',
-              label: 'Express shipping',
-              amount: {currency: this.currency, value: '20.00'}
+            id: 'global_express',
+            label: 'Express shipping',
+            amount: {currency: this.currency, value: '20.00'}
           });
         }
-        resolve(details);
-      },
 
-      _updateShippingOptions: function(details, shippingOptionId, resolve) {
+        resolve(details);
+      }
+
+      _updateShippingOptions(details, shippingOptionId, resolve) {
         // Find the newly and previously selected shipping options
-        var newShippingOption, oldShippingOption;
-        details.shippingOptions.forEach( function(shippingOption) {
+        let newShippingOption, oldShippingOption;
+        details.shippingOptions.forEach(shippingOption => {
           if (shippingOption.id === shippingOptionId) {
             newShippingOption = shippingOption;
           } if (shippingOption.selected === true) {
@@ -180,19 +180,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         this._updateTotal(details, newShippingOption, oldShippingOption);
 
         resolve(details);
-      },
+      }
 
       // Updates the total order cost to include shipping
       // If shipping has already been added, it must be subtracted and the line item removed
-      _updateTotal: function(details, newShippingOption, oldShippingOption) {
-          var oldShippingCost = 0;
+      _updateTotal(details, newShippingOption, oldShippingOption) {
+          let oldShippingCost = 0;
           if (oldShippingOption) {
-              // Remove from the line items; it should be on the end
-              // TODO: explicitly remove the item by its id?
-              details.displayItems.pop();
+            // Remove from the line items; it should be on the end
+            // TODO: explicitly remove the item by its id?
+            details.displayItems.pop();
 
-              // Deduct the cost of the old shipping
-              oldShippingCost = Number(oldShippingOption.amount.value);
+            // Deduct the cost of the old shipping
+            oldShippingCost = Number(oldShippingOption.amount.value);
           }
 
           var shippingCost = Number(newShippingOption.amount.value);
@@ -200,14 +200,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           details.total.amount.value = (currentTotal + shippingCost - oldShippingCost).toFixed(2);
           // Place the shipping price at the end of the line items
           details.displayItems.splice(details.displayItems.length, 0, newShippingOption);
-      },
+      }
 
-      _computePaymentTypesSupported: function(basicCards, supportedMethods, payWithGoogle) {
-        var paymentTypes = [];
+      _computePaymentTypesSupported(basicCards, supportedMethods, payWithGoogle) {
+        let paymentTypes = [];
 
         if (basicCards.length > 0) {
           paymentTypes.push({
-            supportedMethods: ['basic-card'],
+            supportedMethods: 'basic-card',
             data: {
               supportedNetworks: basicCards
             }
@@ -222,23 +222,22 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         if (payWithGoogle && payWithGoogle != {}) {
           paymentTypes.push({
-            supportedMethods: ['https://google.com/pay'],
+            supportedMethods: 'https://google.com/pay',
             data: payWithGoogle
           });
         }
 
         return paymentTypes;
-      },
+      }
 
-      _computeItemDetails: function() {
-        var items = [];
+      _computeItemDetails() {
+        let items = [];
 
         if (this.cart) {
-          for (var i = 0; i < this.cart.length; ++i) {
-            var entry = this.cart[i];
-            var itemCost = entry.quantity * entry.item.price;
+          for (let entry of this.cart) {
+            let itemCost = entry.quantity * entry.item.price;
             items.push({
-              label: entry.item.title + ' ' + entry.size + ' x' + entry.quantity,
+              label: `${entry.item.title} ${entry.size} x ${entry.quantity}`,
               amount: {currency: this.currency, value: itemCost.toFixed(2)}
             });
           }
@@ -247,7 +246,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         return items;
       }
 
-    });
+    };
+
+    customElements.define(ShopPaymentRequest.is, ShopPaymentRequest);
 
   </script>
 
