--- a/src/shop-account.html
+++ b/src/shop-account.html
@@ -72,6 +72,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       .thanks {
         font-size: 1.5em;
+        text-align: center;
         margin: 26px 0;
       }
 
