YOLO Web-nized code

--- a/src/lazy-resources.html
+++ b/src/lazy-resources.html
@@ -9,7 +9,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <!-- shop-app -->
-<link rel="import" href="shop-account-data.html">
+<link rel="import" href="shop-googleyolo.html">
 <link rel="import" href="shop-icons.html">
 <link rel="import" href="shop-analytics.html">
 <link rel="import" href="shop-cart-data.html">
