--- a/src/shop-googleyolo.html
+++ b/src/shop-googleyolo.html
@@ -1,6 +1,6 @@
 <!--
 @license
-Copyright (c) 2016 The Polymer Project Authors. All rights reserved.
+Copyright (c) 2017 The Polymer Project Authors. All rights reserved.
 This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
 The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
 The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
@@ -8,10 +8,11 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/iron-meta/iron-meta.html">
+<script src="https://smartlock.google.com/client" async defer></script>
 
-<dom-module id="shop-account-data">
+<dom-module id="shop-googleyolo">
 
   <script>
     const SIGNUP = '/register';
@@ -19,31 +20,38 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     const UNREGISTER = '/unregister';
     const PASSWORD = '/auth/password';
     const GOOGLE = '/auth/google';
-    const GOOGLE_FEDERATION = 'https://accounts.google.com'
+    const AUTH_GOOGLE = 'https://accounts.google.com';
+    const AUTH_PASSWORD = 'googleyolo://id-and-password';
 
-    class ShopAccountData extends Polymer.Element {
+    class ShopGoogleyolo extends Polymer.Element {
 
-      static get is() { return 'shop-account-data'; }
+      static get is() { return 'shop-googleyolo' } 
 
       static get properties() { return {
         profile: {
           type: Object,
           value: null,
           notify: true
-        }
+        },
+        googleSigninClientId: String
       }}
 
       ready() {
         super.ready();
         new Polymer.IronMeta({type: 'account', key: 'account', value: this});
         this._initializeProfile();
-        gapi.load('auth2', () => {
-          gapi.auth2.init().then(() => {
+        this.googleSigninClientId = document.querySelector('meta[name="google-signin-client_id"]').content;
+        if (!window.googleyolo) {
+          window.onGoogleYoloLoad = function() {
             this.dispatchEvent(new CustomEvent('account-data-ready', {
               bubbles: true, composed: true
             }));
-          })
-        });
+          };
+        } else {
+          this.dispatchEvent(new CustomEvent('account-data-ready', {
+            bubbles: true, composed: true
+          }));
+        }
       }
 
       isSignedIn() {
@@ -70,44 +78,65 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         };
       }
 
-      autoSignIn(unmediated) {
-        // Do nothing when Credential API is not available
-        if (navigator.credentials) {
-          // Attempt to get credentials and auto-login if possible
-          return navigator.credentials.get({
-            password: true,
-            federated: {
-              providers: [ GOOGLE_FEDERATION ]
-            },
-            mediation: unmediated ? 'silent' : 'optional'
-          }).then(cred => {
-            // Ensure they're not empty
-            if (!cred) {
-              return Promise.resolve();
-            }
-
-            // TODO: Check creds with the auth backend
-            if (cred.type === 'password') {
-              let form = new FormData();
-              form.append('email', cred.id);
-              form.append('password', cred.password);
-              return this._fetch(PASSWORD, form)
-            } else if (cred.type === 'federated') {
-              // This credential must be GOOGLE
-              return this.gSignIn(cred.id);
-            }
-          }).then(profile => {
-            if (profile) {
-              this.setProfile(profile);
-            }
-            return Promise.resolve(profile);
-          }, () => {
-            this._initializeProfile();
+      autoSignIn() {
+        return googleyolo.retrieve({
+          supportedAuthMethods: [ AUTH_GOOGLE, AUTH_PASSWORD ],
+          supportedIdTokenProviders: [{
+            uri: AUTH_GOOGLE,
+            clientId: this.googleSigninClientId
+          }]
+        }).then(cred => {
+          if (!cred) {
             return Promise.reject();
-          });
-        } else {
-          return Promise.resolve();
-        }
+          }
+          switch (cred.authMethod) {
+            case AUTH_PASSWORD:
+              return this._fetch(PASSWORD, cred)
+            case AUTH_GOOGLE:
+              let form = new FormData();
+              form.append('id_token', cred.idToken);
+              return this._fetch(GOOGLE, form);
+            default:
+              return Promise.reject();
+          }
+        }).then(profile => {
+          if (profile) {
+            this.setProfile(profile);
+            return Promise.resolve(profile);
+          } else {
+            return Promise.resolve();
+          }
+        }).catch(err => {
+          this._initializeProfile();
+          return Promise.reject(err);
+        });
+      }
+
+      signUp() {
+        return googleyolo.hint({
+          supportedAuthMethods: [ AUTH_GOOGLE ],
+          supportedIdTokenProviders: [{
+            uri: AUTH_GOOGLE,
+            clientId: this.googleSigninClientId
+          }],
+          context: 'signUp'
+        }).then(cred => {
+          if (cred.idToken) {
+            let form = new FormData();
+            form.append('id_token', cred.idToken);
+            return this._fetch(GOOGLE, form);
+          } else {
+            return Promise.reject();
+          }
+        }).then(profile => {
+          if (profile) {
+            this.setProfile(profile);
+          }
+          return Promise.resolve(profile);
+        }).catch(err => {
+          this._initializeProfile();
+          return Promise.reject(err);
+        });
       }
 
       pSignIn(form) {
@@ -122,9 +151,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               password: password
             });
             navigator.credentials.store(cred);
-         }
-         return Promise.resolve(profile);
-       });
+          }
+          return Promise.resolve(profile);
+        });
       }
 
       pSignUp(form) {
@@ -198,16 +227,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       logout() {
         return this._fetch(SIGNOUT)
         .then(() => {
-          if (navigator.credentials) {
-            navigator.credentials.preventSilentAccess();
-          }
+          googleyolo.disableAutoSignIn();
           this._initializeProfile();
         });
       }
 
     };
 
-    customElements.define(ShopAccountData.is, ShopAccountData);
+    customElements.define(ShopGoogleyolo.is, ShopGoogleyolo);
 
   </script>
 
