Remove password autofocus

--- a/src/shop-account.html
+++ b/src/shop-account.html
@@ -150,8 +150,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               <input type="password" id="accountPassword" name="password"
                   placeholder="Password" required
                   aria-labelledby="accountPasswordLabel"
-                  autocomplete="current-password"
-                  autofocus$="[[_computeFocusOnPW(route, prefilledEmail)]]">
+                  autocomplete="current-password">
               <shop-md-decorator error-message="Invalid Password" aria-hidden="true">
                 <label id="accountPasswordLabel">Password</label>
                 <shop-underline></shop-underline>
