--- a/src/shop-googleyolo.html
+++ b/src/shop-googleyolo.html
@@ -232,6 +232,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         return this._fetch(SIGNOUT)
         .then(() => {
           googleyolo.disableAutoSignIn();
+          navigator.credentials.preventSilentAccess();
           this._initializeProfile();
         });
       }
