--- a/src/shop-account.html
+++ b/src/shop-account.html
@@ -303,7 +303,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         this._setWaiting(true);
 
         this.$.loginForm.dispatchEvent(new CustomEvent('iron-form-presubmit',  {
-          bubbles: false, composed: true });
+          bubbles: false, composed: true }));
 
         var form = new FormData(this.$.loginForm);
 
@@ -337,7 +337,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         this._setWaiting(true);
 
         this.$.loginForm.dispatchEvent(new CustomEvent('iron-form-presubmit',  {
-          bubbles: false, composed: true });
+          bubbles: false, composed: true }));
 
         var form = new FormData(this.$.loginForm);
 
